--- a/README
+++ b/README
@@ -5,17 +5,4 @@ This project was implemented by 'reference_nic_1g_cml' and 'openflow_datapath_v1
 It includes Xilinx CAM (xapp1151) in the 'openflow_switch_1g_cml/hw/pcores/openflow_datapath_v1_00_a'
 
 -Structure
-[1G_CML_interface] 
-       |            (256 bits)
-[AXIS Converter]
-       |            (64 bits)
-[OpenFlow Datapath] 
-       |            (64 bits)
-[AXIS Converter] 
-       |            (256 bits)
-[Input Arbiter] 
-       |            (256 bits)
-[Output queue]
-       |            (256 bits)
-[1G_CML_interface] 
-
+![screenshot](./img/structure.png)
