--- a/README
+++ b/README
@@ -5,4 +5,4 @@ This project was implemented by 'reference_nic_1g_cml' and 'openflow_datapath_v1
 It includes Xilinx CAM (xapp1151) in the 'openflow_switch_1g_cml/hw/pcores/openflow_datapath_v1_00_a'
 
 -Structure
-![screenshot](./img/structure.png)
+![structure](./img/cml_openflow.png)
